moved authorized logo to float right

--- a/css/style.css
+++ b/css/style.css
@@ -718,7 +718,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-right: 50px;
   margin-bottom: auto; */
   float: right;
-  margin-top: -175px;
+  /* margin-top: -175px; */
 
  
 
